# Lab-2-CMake-Gtest

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
File Sorter/: CMakeLists.txt
File Sorter/docs/: CMakeLists.txt
File Sorter/src/: CMakeLists.txt
File Sorter/src/app/: CMakeLists.txt
File Sorter/src/filesLib/: CMakeLists.txt
File Sorter/src/libs/: CMakeLists.txt
File Sorter/src/libs/filesLib/: CMakeLists.txt
File Sorter/src/libs/sortingLib/: CMakeLists.txt
File Sorter/src/libs/sortingLib/include/: sorting.hpp
File Sorter/src/libs/sortingLib/src/: sorting.cpp
File Sorter/src/sortingLib/: CMakeLists.txt
File Sorter/src/tests/: CMakeLists.txt  testApp.cpp  tests.cpp
libraries/: CMakeLists.txt
libraries/files/: CMakeLists.txt
libraries/files/src/: files.cpp
libraries/sorting/: CMakeLists.txt
